--- a/index.html
+++ b/index.html
@@ -6,10 +6,232 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" href="src/styles.css">
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+  <script src="https://kit.fontawesome.com/d181392ea4.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
+  <div class="container float-md-start">
+    <div class="border rounded m-5 shadow wrapper">
+      <div class="row">
+        <div class="col ml-5">
+          <div class="row mt-4">
+            <div class="col-6 heading-size">
+              Current Weather in
+              <span id="current-city">
+                Minneapolis, MN</span>
+            </div>
+            <div class="col-2 current-time pt-1" id="time-now">
+              9:57 PM
+            </div>
+            <div class="col-4">
+              <nav class="navbar navbar-light pt-0">
+                <form class="form-inline" id="search-city">
+                  <input class="form-control form-control-sm mr-sm-2" type="search" placeholder="Search City"
+                    aria-label="Search" id="city-input">
 
+                </form>
+              </nav>
+              <button type="button" class="btn btn-outline-primary ml-4 pt-0 pb-0 pr-5 pl-5 d-block">Current city
+
+              </button>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col">
+              <ul>
+                <li>
+                  <span class="main-weather">
+                    <div class="pr-5">
+                      <img src="icons/cloudy-night.svg" alt="Main weather icon" class="main-icon icon-style">
+                    </div>
+                  </span>
+                </li>
+                <li class="weather-subtitle mt-n4">The weather is
+                  <span id="weather-description">partly cloudy</span>
+                </li>
+              </ul>
+            </div>
+            <div class=" col row">
+              <div class="col-12">
+                <ul>
+                  <li class="main-temperature pt-5">
+                    <ul>
+                      <li>
+                        <span id="searched-temp">58°</span>
+                        <a href="#" id="change-temp">F </a>
+                      </li>
+                    </ul>
+                  </li>
+                  <li>
+                    <ul class="mt-5">
+                      <li>
+                        Humidity:
+                        <span id="humidity-value">80</span>%
+                      </li>
+                      <li>
+                        Wind <span id="wind-speed">3</span> mph
+                      </li>
+
+                    </ul>
+                  </li>
+                </ul>
+              </div>
+
+            </div>
+          </div>
+          <br>
+          <div class="row mt-4 border rounded pt-2 wrapper-three shadow-sm">
+            <div class="col ">
+              <div class="row ">
+                <div class="col-12">
+                  <ul>
+                    <li>
+                      10:57 PM
+                    </li>
+                    <li class="pt-2">
+                      58°F
+                    </li>
+                    <li class="pt-4">
+                      <img src="icons/cloudy-night.svg" alt="Bottom row weather icon"
+                        class="bottom-row-icons icon-style mt-n4 mb-n3 ml-2">
+                    </li>
+                  </ul>
+                </div>
+
+              </div>
+            </div>
+            <div class="col">
+              <div class="row">
+                <div class="col-12">
+                  <ul>
+                    <li>
+                      11:57 PM
+                    </li>
+                    <li class="pt-2">
+                      57°F
+                    </li>
+                    <li class="pt-4">
+                      <img src="icons/cloudy-night.svg" alt="Bottom row weather icon"
+                        class="bottom-row-icons icon-style mt-n4 mb-n3 ml-2">
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="row">
+                <div class="col-12">
+                  <ul>
+                    <li>
+                      12:57 PM
+                    </li>
+                    <li class="pt-2">
+                      57°F
+                    </li>
+                    <li class="pt-4">
+                      <img src="icons/cloudy-night.svg" alt="Bottom row weather icon"
+                        class="bottom-row-icons icon-style mt-n4 mb-n3 ml-2">
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="row">
+                <div class="col-12">
+                  <ul>
+                    <li>
+                      1:57 AM
+                    </li>
+                    <li class="pt-2">
+                      56°F
+                    </li>
+                    <li class="pt-4">
+                      <img src="icons/cloudy-night.svg" alt="Bottom row weather icon"
+                        class="bottom-row-icons icon-style mt-n4 mb-n3 ml-2">
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="row">
+                <div class="col-12">
+                  <ul>
+                    <li>
+                      2:57 PM
+                    </li>
+                    <li class="pt-2">
+                      55°F
+                    </li>
+                    <li class="pt-4">
+                      <img src="icons/cloudy-night.svg" alt="Bottom row weather icon"
+                        class="bottom-row-icons icon-style mt-n4 mb-n3 ml-2">
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+
+          </div>
+        </div>
+
+        <div class="col-3 mt-2 mb-2 ml-2 mr-3">
+          <div class="card shadow wrapper-two">
+            <ul>
+              <li>
+                <div class="card-body pt-2 pb-0">
+                  <p class="temperature-days">Sunday
+                  </p>
+                  <img src="icons/rainy.svg" alt="Sidebar weather icon" class="sidebar-icon icon-style mt-n4">
+                </div>
+              </li>
+              <li>
+                <div class="card-body pt-0 pb-0">
+                  <div class="card-body pt-0 pb-0">
+                    <p class="temperature-days">Monday
+                    </p>
+                    <img src="icons/cloudy.svg" alt="Sidebar weather icon" class="sidebar-icon icon-style mt-n4">
+                  </div>
+              </li>
+              <li>
+                <div class="card-body pt-0 pb-0">
+                  <div class="card-body pt-0 pb-0">
+                    <p class="temperature-days">Tuesday
+                    </p>
+                    <img src="icons/cloudy-day.svg" alt="Sidebar weather icon" class="sidebar-icon icon-style mt-n4">
+                  </div>
+              </li>
+              <li>
+                <div class="card-body pt-0 pb-2">
+                  <div class="card-body pt-0 pb-0">
+                    <p class="temperature-days">Wednesday
+                    </p>
+                    <img src="icons/rainy.svg" alt="Main weather icon" class="sidebar-icon icon-style mt-n4">
+                  </div>
+              </li>
+              <li>
+                <div class="card-body pt-0 pb-0">
+                  <div class="card-body pt-0 pb-0">
+                    <p class="temperature-days">Thursday
+                    </p>
+                    <img src="icons/day.svg" alt="Sidebar weather icon" class="sidebar-icon icon-style mt-n4">
+
+                  </div>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </div>
+  </div>
+  <script src="src/index.js"></script>
 </body>
 
 </html>
