create link to github

--- a/index.html
+++ b/index.html
@@ -228,6 +228,9 @@
         </div>
       </div>
     </div>
+    <div class="text-white text-left pl-5 mt-n4">
+      <a href="https://github.com/saraikong/weather-app.git" target="_blank">Open-source code</a> by Sarai Kong
+    </div>
 
   </div>
   </div>
