Add new id and adjust heading font weight

--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
               <ul>
                 <li>
                   <span class="main-weather">
-                    <div class="pr-5">
+                    <div class="pr-5 border rounded wrapper-three shadow-sm">
                       <img src="icons/cloudy-night.svg" alt="Main weather icon" class="main-icon icon-style">
                     </div>
                   </span>
                 </li>
-                <li class="weather-subtitle mt-n4">The weather is
-                  <span id="weather-description">partly cloudy</span>
+                <!-- <li class="weather-subtitle mt-n4">The weather is
+                  <!- <span id="weather-description">partly cloudy</span> -->
                 </li>
               </ul>
             </div>
@@ -67,7 +67,10 @@
                     </ul>
                   </li>
                   <li>
-                    <ul class="mt-5">
+                    <ul>
+                      <li>
+                        <span id="weather-description">partly cloudy</span>
+                      </li>
                       <li>
                         Humidity:
                         <span id="humidity-value">80</span>%
