updated current time in js
Changed from 24 hour format to 12 hour format

--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
               <span id="current-city">
                 Minneapolis, MN</span>
             </div>
-            <div class="col-2 current-time pt-1" id="time-now">
-              9:57 PM
+            <div class="col-2 current-time pt-1">
+              <span id="time-now">
+                9:57</span> <span id="am-pm"> PM </span>
             </div>
             <div class="col-4">
               <nav class="navbar navbar-light pt-0">
