created if statement inside showTemp()

--- a/index.html
+++ b/index.html
@@ -43,18 +43,12 @@
           </div>
           <div class="row">
             <div class="col">
-              <ul>
-                <li>
-                  <span class="main-weather">
-                    <div class="pr-5 border rounded wrapper-three shadow-sm">
-                      <img src="icons/cloudy-night.svg" alt="Main weather icon" class="main-icon icon-style">
-                    </div>
-                  </span>
-                </li>
-                <!-- <li class="weather-subtitle mt-n4">The weather is
-                  <!- <span id="weather-description">partly cloudy</span> -->
-                </li>
-              </ul>
+              <span class="main-weather">
+                <div class="pr-5 ">
+                  <img src="icons/cloudy-night.svg" alt="Main weather icon"
+                    class="main-icon icon-style border rounded wrapper-three shadow-sm" id="main-icon">
+                </div>
+              </span>
             </div>
             <div class=" col row">
               <div class="col-12">
