--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
               <nav class="navbar navbar-light pt-0">
                 <form class="form-inline" id="search-city">
                   <input class="form-control form-control-sm mr-sm-2" type="search" placeholder="Search City"
-                    aria-label="Search" id="city-input">
+                    aria-label="Search" id="city-input" autocomplete="off">
 
                 </form>
               </nav>
