add forecast api

--- a/index.html
+++ b/index.html
@@ -180,8 +180,8 @@
 
         <div class="col-3 mt-2 mb-2 ml-2 mr-3">
           <div class="card shadow wrapper-two">
-            <ul>
-              <li>
+            <ul id="forecast">
+              <!-- <li>
                 <div class="card-body pt-2 pb-0">
                   <p class="temperature-days">Sunday
                   </p>
@@ -220,7 +220,7 @@
                     <img src="icons/day.svg" alt="Sidebar weather icon" class="sidebar-icon icon-style mt-n4">
 
                   </div>
-              </li>
+              </li> -->
             </ul>
           </div>
         </div>
