Removed Celsius temperature

--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
                 <ul>
                   <li class="main-temperature pt-5">
                     <ul>
-                      <li>
+                      <li class="text-primary">
                         <span id="searched-temp">58°</span>
-                        <a href="#" id="change-temp">F </a>
+                        F
                       </li>
                     </ul>
                   </li>
@@ -181,46 +181,6 @@
         <div class="col-3 mt-2 mb-2 ml-2 mr-3">
           <div class="card shadow wrapper-two">
             <ul id="forecast">
-              <!-- <li>
-                <div class="card-body pt-2 pb-0">
-                  <p class="temperature-days">Sunday
-                  </p>
-                  <img src="icons/rainy.svg" alt="Sidebar weather icon" class="sidebar-icon icon-style mt-n4">
-                </div>
-              </li>
-              <li>
-                <div class="card-body pt-0 pb-0">
-                  <div class="card-body pt-0 pb-0">
-                    <p class="temperature-days">Monday
-                    </p>
-                    <img src="icons/cloudy.svg" alt="Sidebar weather icon" class="sidebar-icon icon-style mt-n4">
-                  </div>
-              </li>
-              <li>
-                <div class="card-body pt-0 pb-0">
-                  <div class="card-body pt-0 pb-0">
-                    <p class="temperature-days">Tuesday
-                    </p>
-                    <img src="icons/cloudy-day.svg" alt="Sidebar weather icon" class="sidebar-icon icon-style mt-n4">
-                  </div>
-              </li>
-              <li>
-                <div class="card-body pt-0 pb-2">
-                  <div class="card-body pt-0 pb-0">
-                    <p class="temperature-days">Wednesday
-                    </p>
-                    <img src="icons/rainy.svg" alt="Main weather icon" class="sidebar-icon icon-style mt-n4">
-                  </div>
-              </li>
-              <li>
-                <div class="card-body pt-0 pb-0">
-                  <div class="card-body pt-0 pb-0">
-                    <p class="temperature-days">Thursday
-                    </p>
-                    <img src="icons/day.svg" alt="Sidebar weather icon" class="sidebar-icon icon-style mt-n4">
-
-                  </div>
-              </li> -->
             </ul>
           </div>
         </div>
