updated current time

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             </div>
           </div>
           <br>
-          <div class="row mt-4 border rounded pt-2 wrapper-three shadow-sm">
+          <div class="row mt-4 border rounded pt-2 wrapper-three shadow-sm" id="hourly-forecast">
             <div class="col ">
               <div class="row ">
                 <div class="col-12">
