implement hourly forecast minute format

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
           </div>
           <br>
           <div class="row mt-4 border rounded pt-2 wrapper-three shadow-sm" id="hourly-forecast">
-            <div class="col ">
+            <!-- <div class="col ">
               <div class="row ">
                 <div class="col-12">
                   <ul>
@@ -173,7 +173,7 @@
                   </ul>
                 </div>
               </div>
-            </div>
+            </div> -->
 
           </div>
         </div>
