--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="src/styles.css">
-  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+  <!-- <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script> -->
+  <script src="https://unpkg.com/axios@1.0.0/dist/axios.min.js"></script>
   <script src="https://kit.fontawesome.com/d181392ea4.js" crossorigin="anonymous"></script>
 </head>
 
@@ -83,97 +84,6 @@
           </div>
           <br>
           <div class="row mt-4 border rounded pt-2 wrapper-three shadow-sm" id="hourly-forecast">
-            <!-- <div class="col ">
-              <div class="row ">
-                <div class="col-12">
-                  <ul>
-                    <li>
-                      10:57 PM
-                    </li>
-                    <li class="pt-2">
-                      58°F
-                    </li>
-                    <li class="pt-4">
-                      <img src="icons/cloudy-night.svg" alt="Bottom row weather icon"
-                        class="bottom-row-icons icon-style mt-n4 mb-n3 ml-2">
-                    </li>
-                  </ul>
-                </div>
-
-              </div>
-            </div>
-            <div class="col">
-              <div class="row">
-                <div class="col-12">
-                  <ul>
-                    <li>
-                      11:57 PM
-                    </li>
-                    <li class="pt-2">
-                      57°F
-                    </li>
-                    <li class="pt-4">
-                      <img src="icons/cloudy-night.svg" alt="Bottom row weather icon"
-                        class="bottom-row-icons icon-style mt-n4 mb-n3 ml-2">
-                    </li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-            <div class="col">
-              <div class="row">
-                <div class="col-12">
-                  <ul>
-                    <li>
-                      12:57 PM
-                    </li>
-                    <li class="pt-2">
-                      57°F
-                    </li>
-                    <li class="pt-4">
-                      <img src="icons/cloudy-night.svg" alt="Bottom row weather icon"
-                        class="bottom-row-icons icon-style mt-n4 mb-n3 ml-2">
-                    </li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-            <div class="col">
-              <div class="row">
-                <div class="col-12">
-                  <ul>
-                    <li>
-                      1:57 AM
-                    </li>
-                    <li class="pt-2">
-                      56°F
-                    </li>
-                    <li class="pt-4">
-                      <img src="icons/cloudy-night.svg" alt="Bottom row weather icon"
-                        class="bottom-row-icons icon-style mt-n4 mb-n3 ml-2">
-                    </li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-            <div class="col">
-              <div class="row">
-                <div class="col-12">
-                  <ul>
-                    <li>
-                      2:57 PM
-                    </li>
-                    <li class="pt-2">
-                      55°F
-                    </li>
-                    <li class="pt-4">
-                      <img src="icons/cloudy-night.svg" alt="Bottom row weather icon"
-                        class="bottom-row-icons icon-style mt-n4 mb-n3 ml-2">
-                    </li>
-                  </ul>
-                </div>
-              </div>
-            </div> -->
 
           </div>
         </div>
