--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="src/styles.css">
-  <!-- <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script> -->
   <script src="https://unpkg.com/axios@1.0.0/dist/axios.min.js"></script>
   <script src="https://kit.fontawesome.com/d181392ea4.js" crossorigin="anonymous"></script>
 </head>
@@ -72,7 +71,7 @@
                         <span id="humidity-value">80</span>%
                       </li>
                       <li>
-                        Wind <span id="wind-speed">3</span> mph
+                        Wind: <span id="wind-speed">3</span> mph
                       </li>
 
                     </ul>
